--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nuxt": "^3.6.2"
   },
   "dependencies": {
-    "nuxt-swiper": "^1.2.0"
+    "nuxt-swiper": "^1.2.0",
+    "uuid": "^9.0.0"
   }
 }
