--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/supabase": "^1.0.2",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^18.16.19",
+    "daisyui": "^3.5.1",
     "nuxt": "^3.6.2"
   },
   "dependencies": {
